nullaway_error_08EDF4AE-8B30-4C5E-A3C2-028200015152.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-expression/src/main/java/org/springframework/expression/spel/support/ReflectionHelper.java:395: error: [NullAway] dereferenced expression varArgContentType.getElementTypeDescriptor() is @Nullable
					if (varArgContentType.getElementTypeDescriptor().getObjectType() == Optional.class) {
					                                                ^
    (see http://t.uber.com/nullaway )
